# my-test-project

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
src/: MTQueue.cpp  benchmark_sum.cpp  condition_variable.cpp  for_sin_sum.cpp  parallel_reduce.cpp  parallel_reduce_sum.cpp  recursive_templates.cpp  tbb_avg.cpp
